# Yosuga_server

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt
Test/: GPTSoVITSTest.py  WebsocketTestClient.py  WebsocketTestServer.py  asrRequestTest.py  dtosAndTTSAndASR.py  dtosTest.py  embeddedServerTest.py  textAITest.py  ui_tars_test.py
src/config/: config.py
src/modules/asr_module/: api.py  readme.md  start_api.py
src/modules/asr_module/client/: asr_client.py  models.py
src/modules/device_control_module/: readme.md
src/modules/text_ai_module/text_ai_core/: general_text_ai_req.py  readme.md
src/modules/tts_module/: readme.md
src/modules/tts_module/tts_core/: async_audio_player.py
src/modules/websocket_base_module/: readme.md
src/modules/websocket_base_module/dto/: dto_base.py  second_dtos.py  third_dtos.py
src/modules/websocket_base_module/websocket_core/: core_ws_server.py
src/server_core/: core.py  readme.md
src/server_core/emotion_core/: readme.md
src/server_core/llm_core/: llm_core.py  llm_core_analysis.py  llm_core_dispatcher.py  llm_core_prompt_manager.py  llm_core_prompts.py  llm_core_token.py  readme.md
src/server_core/rag_core/: readme.md
src/server_core/yosuga_embedded_server/: __init__.py  ai_prompt.py  device_dto.py  device_manager.py  function_registry.py  json_rpc.py  server.py
src/server_view/: readme.md  start_web.py
src/server_view/backend/: .gitignore  app.py  core_manager.py  diagnostics.py
src/server_view/frontend/: .gitignore  index.html  package.json  vite.config.ts
(+27 files in other folders)
