[project]
name = "yosuga-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "fastapi>=0.128.0",
    "faster-whisper>=1.2.1",
    "loguru>=0.7.3",
    "openai>=2.16.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "tiktoken>=0.12.0",
    "uvicorn>=0.40.0",
    "websockets>=16.0",
]
